[package]
name = "bml"
version = "0.3.0"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
edition = "2018"
description = "BML Markup Language"
documentation = "https://docs.rs/bml"
repository = "https://github.com/qu1x/bml"
readme = "README.md"
keywords = [
	"bml",
	"markup-language",
	"snes-preservation-project",
	"higan-manifest",
	"bsnes-manifest",
]
categories = [
	"command-line-utilities",
	"parser-implementations",
	"encoding",
	"config",
]
license = "ISC"
include = [
	"src/lib.rs",
	"src/bml.pest",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
]

[badges]
travis-ci = { repository = "qu1x/bml" }

[dependencies]
thiserror = "1"
pest = "2"
pest_derive = "2"
smartstring = "0.2"
ordered-multimap = "0.3"
