[package]
name = "bml"
version = "0.3.0"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
edition = "2018"
description = "BML Markup Language"
documentation = "https://docs.rs/bml"
repository = "https://github.com/qu1x/bml"
readme = "README.md"
keywords = [
	"bml",
	"markup-language",
	"snes-preservation",
	"higan-manifest",
	"bsnes-manifest",
]
categories = [
	"command-line-utilities",
	"parser-implementations",
	"encoding",
	"config",
]
license = "ISC"
include = [
	"src/lib.rs",
	"src/bml.pest",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
]


[dependencies]
thiserror = "1"
pest = "2"
pest_derive = "2"
smartstring = "1.0.1"
ordered-multimap = "0.6.0"
