[package]
name = "bml"
version = "0.3.1"
edition = "2021"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
description = "BML Markup Language"
documentation = "https://docs.rs/bml"
repository = "https://github.com/qu1x/bml"
readme = "README.md"
license = "ISC"
keywords = [
	"bml",
	"markup-language",
	"snes-preservation",
	"higan-manifest",
	"bsnes-manifest",
]
categories = [
	"command-line-utilities",
	"parser-implementations",
	"encoding",
	"config",
]
include = [
	"src/lib.rs",
	"src/bml.pest",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
]

[dependencies]
thiserror = "1"
pest = "2"
pest_derive = "2"
smartstring = "1.0.1"
ordered-multimap = "0.6"
